# coursera

./: LICENSE  README.md  pyproject.toml
ai-capstone-project-with-dl/: README.md  notes.md
introduction-dl-with-keras/: AssignmentSubmission.ipynb  README.md
introduction-nn-with-pytorch/: Final Project League of Legends Match Predictor.ipynb  lol_model.pth  playground.ipynb
